--- a/index.html
+++ b/index.html
@@ -9,7 +9,11 @@
 </head>
 <body>
     <div class="container">
-        <input class="name" type="text" value="" required>
+        <div class="text-input">
+
+            <label for="name">Enter Your Name here &dArr;</label><br>
+            <input class="name" id = "name" type="text" value="" required>
+        </div>
         <a href="#" class="btn">Click Me</a>
 
         <div class="popup hidden">
