--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
             <h1 class="main"></h1>
             <p class="text">
                 You are working soo hard keep up the good Work,
-                Remember to take of Your Health.
+                Remember to take care of Your Health.
                 Have a Nice Day.
             </p>
         </div>
