--- a/index.html
+++ b/index.html
@@ -1,33 +1,27 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="style.css">
-    <link rel="stylesheet" href="queries.css">
-    <title>Pop Up</title>
+    <title>Modal Window</title>
 </head>
+
 <body>
-    <div class="container">
-        <div class="text-input">
-
-            <label for="name">Enter Your Name here &dArr;</label><br>
-            <input class="name" id = "name" type="text" value="" required>
-        </div>
-        <a href="#" class="btn">Click Me</a>
-
-        <div class="popup hidden">
-            <p class="cross">&times;</p>
-            <h1 class="main"></h1>
-            <p class="text">
-                You are working soo hard keep up the good Work,
-                Remember to take care of Your Health.
-                Have a Nice Day.
-            </p>
-        </div>
-        <div class="overlay hidden"></div>
+    <div class="overlay hide"></div>
+    <button class="btn">Click Me</button>
+    <div class="modal hide">
+        Lorem ipsum, dolor sit amet consectetur adipisicing elit. Officia rem quae, sit sint sapiente amet, odit laborum
+        delectus adipisci omnis expedita ipsum et exercitationem ipsam asperiores optio numquam, repellendus eveniet!
+        Lorem ipsum, dolor sit amet consectetur adipisicing elit. Quod dolores nemo laboriosam aspernatur quisquam
+        similique tempore magni suscipit vero fugit voluptates, aut mollitia autem? Consectetur nam laboriosam mollitia
+        aut quas?
+        <div class="cross">x</div>
     </div>
-    <script src="script.js"></script>
+
+    <script src="./script.js"></script>
 </body>
+
 </html>
